# modular-agent-designer

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  PYPI_README.md  README.md  TODO.md  diagram.mmd  pyproject.toml  run_agent_overrides.py
.claude/plans/: i-want-to-mention-modular-riddle.md
ai_skills/: README.md
ai_skills/mad-create-workflow/: SKILL.md
ai_skills/mad-overview/: SKILL.md
ai_skills/mad-routing/: SKILL.md
ai_skills/mad-sub-agents/: SKILL.md
ai_skills/mad-tools/: SKILL.md
demo_agent/: README.md  __init__.py  agent.py  demo_agent.yaml
demo_agent/tools/: __init__.py
examples/: __init__.py  client_run.py  run_agent_overrides.py
examples/prompts/: output_schema_routing__reject_node.md  research_assistant__researcher.md  (+6 more)
prompts/: fetch_url_test__fetcher.md  local_tools_example__text_analyst.txt  output_schema_routing__process_node.md  output_schema_routing__validator.md  research_assistant__analyst.txt  research_assistant__researcher.txt  research_assistant__writer.txt  sub_agent_example__coordinator.txt  sub_agent_example__search_specialist.txt  summarize_article__summarizer.txt
schemas/: article.py  classification.py  validation.py
skills/: __init__.py
tests/: test_a2a_agents.py  test_adk_agent_params.py  test_builtin_tools.py  test_cli_enhancements.py  test_create_command.py  test_custom_node_config.py  test_dedup_plugin.py  test_diagram.py  test_dynamic_destination.py  test_end_to_end_ollama.py  test_imports_util.py  test_loader.py  test_loop_routing.py  test_lru_cache.py  test_model_registry.py  test_parallel_routing.py  test_retry_routing.py  test_router.py  test_skills.py  test_state_template.py  test_sub_agents.py  test_switch_routing.py  test_tool_availability_plugin.py  test_tool_registry.py  test_workflow_build.py
tools/: text_tools.py
workflows/: a2a_example.yaml  agent_overrides.yaml  complex_conditions.yaml  conditional_workflow.yaml  external_tool_example.yaml  fetch_url_test.yaml  hello_world.yaml  local_tools_example.yaml  loop_workflow.yaml  output_schema_routing.yaml  parallel_workflow.yaml  research_assistant.yaml  retry_error_test.yaml  skills_example.yaml  sub_agent_example.yaml  summarize_article.yaml
(+63 files in other folders)
